--- a/src/attendance/Input.form
+++ b/src/attendance/Input.form
@@ -31,18 +31,13 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="inputField" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jScrollPane2" alignment="0" pref="200" max="32767" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="inputField" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jScrollPane2" alignment="0" pref="200" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="imageLabel" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="imageLabel" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -55,9 +50,9 @@
                   <Component id="notPaidLabel" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="notOnListLabel" min="-2" max="-2" attributes="0"/>
-                  <Component id="jScrollPane5" min="-2" pref="200" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="alreadyCheckedInLabel" max="32767" attributes="0"/>
+                  <Component id="jScrollPane5" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -71,7 +66,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="paidLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="notPaidLabel" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="notOnListLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="alreadyCheckedInLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jScrollPane2" pref="0" max="32767" attributes="0"/>
               </Group>
@@ -173,7 +168,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTextArea" name="notOnList">
+        <Component class="javax.swing.JTextArea" name="alreadyCheckedIn">
           <Properties>
             <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
@@ -218,15 +213,15 @@
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="notOnListLabel">
+    <Component class="javax.swing.JLabel" name="alreadyCheckedInLabel">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="24" style="0"/>
         </Property>
         <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
-          <ComponentRef name="notOnList"/>
+          <ComponentRef name="alreadyCheckedIn"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Not on List"/>
+        <Property name="text" type="java.lang.String" value="Already Checked In"/>
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
     </Component>
